# rf4-web

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  uv_mirror.sh
backend/app/: manage.py
backend/app/agent/: skill.py  tools.py  urls.py  views.py
backend/app/api/: urls.py
backend/app/data/: accessory_data.json  bait_data.json  fish_data.json  food_data.json  groundbait_data.json  hook_data.json  line_data.json  lure_data.json  reel_data.json  rig_data.json  rod_data.json
backend/app/recognition/: models.py  urls.py
backend/app/recognition/migrations/: 0001_initial.py
backend/app/recognition/serializers/: catchSerializer.py
backend/app/recognition/views/: imageView.py
backend/app/rf4/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/services/catch_extractor/: fish_cards.py  get_ocr_result.py  main.py  roboflow_format.py  utils.py
backend/app/services/llm/: __init__.py  client.py  config.py  exceptions.py  vision.py
backend/app/services/recognition/: __init__.py  catch_extractor.py  prompts.py
backend/app/user/: serializers.py  urls.py  views.py
backend/app/wiki/: models.py  urls.py
backend/app/wiki/migrations/: 0001_initial.py  0002_bait.py  0003_alter_bait_name_bait_unique_bait_name_type.py  0004_lure.py  0005_rod.py  0006_reel.py  0007_line.py  0008_hook.py  0009_rig.py  0010_groundbait.py  0011_food.py  0012_accessory.py
backend/scripts/scraper/: download_images.sh  extract_fields.py  fetch_all.sh  gamekee_spider.py  parse_fields.py  test_extract.sh
(+96 files in other folders)
