[project]
name = "rf4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "gunicorn>=23.0.0",
    "litellm>=1.50.0",
    "pillow>=11.2.1",
    "mysqlclient>=2.2.4",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "uvicorn-worker>=0.3.0",
]
